# esp-aws-iot

./: CMakeLists.txt  Kconfig
libraries/Device-Shadow-for-AWS-IoT-embedded-sdk/: CMakeLists.txt
libraries/coreMQTT/port/network_transport/: network_transport.c  network_transport.h
libraries/ota-for-aws-iot-embedded-sdk/port/: core_pkcs11_pal.c  iot_crypto.c  iot_crypto.h  ota_pal.c
